--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>01-Maven-web_assignment Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  #feature
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
